--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
     "require": {
         "php": "^7.4|^8.0"
     },
+    "require-dev": {
+        "nunomaduro/larastan": "^1.0"
+    },
     "autoload": {
         "psr-4": {
             "Credpal\\CPInvest\\": "src"
