--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "php": "^7.4|^8.0"
     },
     "require-dev": {
+        "orchestra/testbench": "^6.0",
         "nunomaduro/larastan": "^1.0"
     },
     "autoload": {
